# gnostr-git

./: .gitignore  .gitmodules  Cargo.toml  GIT-VERSION-FILE  GIT-VERSION-GEN  GNUmakefile  Makefile  builtin.h  cargo.mk  check-builtins.sh  configure.ac  crate-status.md  curl-8.5.0  gnostr-git-instaweb.sh  help.c  openssl-3.0.10  rust-toolchain.toml  shell.nix  trace.h
gix-tui/: Cargo.toml  GNUmakefile  rust-toolchain.toml
gix-tui/asyncgit/: Cargo.toml
gix-tui/asyncgit/src/: blame.rs  branches.rs  commit_files.rs  diff.rs  error.rs  fetch_job.rs  filter_commits.rs  lib.rs  progress.rs  pull.rs  push.rs  push_tags.rs  remote_progress.rs  remote_tags.rs  revlog.rs  status.rs  tags.rs  treefiles.rs
gix-tui/filetreelist/: Cargo.toml
gix-tui/filetreelist/src/: error.rs  filetree.rs  filetreeitems.rs  item.rs  lib.rs  tree_iter.rs  treeitems_iter.rs
gix-tui/git2-hooks/: Cargo.toml
gix-tui/git2-hooks/src/: error.rs  hookspath.rs  lib.rs
gix-tui/git2-testing/: Cargo.toml
gix-tui/git2-testing/src/: lib.rs
gix-tui/invalidstring/: Cargo.toml
gix-tui/invalidstring/src/: lib.rs
gix-tui/scopetime/: Cargo.toml
gix-tui/scopetime/src/: lib.rs
gix-tui/src/: app.rs  args.rs  bug_report.rs  clipboard.rs  cmdbar.rs  input.rs  main.rs  notify_mutex.rs  options.rs  popup_stack.rs  queue.rs  spinner.rs  string_utils.rs  strings.rs  watcher.rs
gix-tui/src/components/: blame_file.rs  branchlist.rs  changes.rs  command.rs  commit.rs  commitlist.rs  compare_commits.rs  create_branch.rs  cred.rs  diff.rs  externaleditor.rs  fetch.rs  file_revlog.rs  (+22 more)
gix-tui/wix/: main.wxs
(+261 files in other folders)
