[package]
name = "gix-tui"
version = "0.0.0"
repository = "https://github.com/Byron/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dedicated to a terminal user interface to interact with git repositories"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.65"

[package.metadata.wix]
upgrade-guid = "A64E86CC-3D19-4E99-BD5E-8380308EAEFB"
path-guid = "CEA97E3A-13C9-4C0F-9888-4C95F39E20B6"
license = false
eula = false

[[bin]]
name = "gixi"
path = "src/main.rs"
doctest = false
test = false

[dependencies]
