[package]
name = "invalidstring"
version = "0.1.2"
authors = ["extrawurst <mail@rusticorn.com>"]
edition = "2021"
description = "just for testing invalid string data"
homepage = "https://github.com/gnostr-org/gnostr-git"
repository = "https://github.com/gnostr-org/gnostr-git"
readme = "README.md"
license = "MIT"
categories = ["development-tools", "development-tools::testing", "encoding"]
keywords = ["string"]

[dependencies]
